# VRSettings

./: CMakeLists.txt  README.md  filemanager.cpp  filemanager.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  registrymanager.cpp  registrymanager.h
